Tagging/force-app/main/default/objects/Tag__c/fields/Corporate_Partner__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field says whether the tag is Corporate Partner or not.</description>
    <label>Corporate Partner</label>
    <type>Checkbox</type>
</CustomField>