Tagging/force-app/main/default/objects/Tag__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>This field give a specific value that a tag has to be placed on the UI.</description>
    <label>Priority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>