Tagging/force-app/main/default/objects/Tag__c/fields/Removeable__c.field-meta.xml
<CustomField>
    <fullName>Removeable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field allows the tag to be removed from the UI.</description>
    <label>Removeable</label>
    <type>Checkbox</type>
</CustomField>