Tagging/force-app/main/default/objects/Tag__c/fields/Tag_Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Tag_Icon_URL__c</fullName>
    <description>This field provides the tag icons</description>
    <formula>$CustomMetadata.Tag_Icon_URL__mdt.Tag_Icon.Tag_Icon_URL__c  +  Tag_Api_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tag_Icon</label>
    <type>Text</type>
</CustomField>